{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 5,
  "lineage": "37a05f0e-a5d5-5652-94a7-9a14717c835a",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846806653:subnet/subnet-0cfd39ec8ad1a35bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfd39ec8ad1a35bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779846806653",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "vpc_id": "vpc-0cb8cca704cde201c"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fa3fe0fa7920f68e",
            "arn": "arn:aws:ec2:us-east-1:779846806653:instance/i-09590bf3c267223a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09590bf3c267223a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-052958b90e0855849"
              }
            ],
            "primary_network_interface_id": "eni-052958b90e0855849",
            "private_dns": "ip-172-31-18-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.249",
            "public_dns": "ec2-34-202-235-61.compute-1.amazonaws.com",
            "public_ip": "34.202.235.61",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a5e0b3a75b3bb65b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "-20251122060504501000000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cfd39ec8ad1a35bf",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
            },
            "vpc_security_group_ids": [
              "sg-01734dd19c1885e4d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "779846806653",
            "id": "i-09590bf3c267223a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.aws_iam_role.this",
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance.data.aws_partition.current",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846806653:security-group/sg-01734dd19c1885e4d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01734dd19c1885e4d",
            "ingress": [],
            "name": "-20251122060504501000000001",
            "name_prefix": "-",
            "owner_id": "779846806653",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": ""
            },
            "tags_all": {
              "Name": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-0cb8cca704cde201c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "779846806653",
            "id": "sg-01734dd19c1885e4d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846806653:security-group-rule/sgr-00de370036de43a25",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-00de370036de43a25",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01734dd19c1885e4d",
            "security_group_rule_id": "sgr-00de370036de43a25",
            "tags": {
              "Name": "-ipv4_default"
            },
            "tags_all": {
              "Name": "-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "779846806653",
            "id": "sgr-00de370036de43a25",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:779846806653:security-group-rule/sgr-04cffecbf05e42346",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-04cffecbf05e42346",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01734dd19c1885e4d",
            "security_group_rule_id": "sgr-04cffecbf05e42346",
            "tags": {
              "Name": "-ipv6_default"
            },
            "tags_all": {
              "Name": "-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "779846806653",
            "id": "sgr-04cffecbf05e42346",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}